Links to download in readme

--- a/README
+++ b/README
@@ -1,5 +1,9 @@
-TODO: Overview of the skin
-TODO: Instuctions to download and install the skin
+Free mediawiki skin with blue, green and red variations — http://gomediawiki.com/wiki/Free_wiki_skin
+
+Instuctions to download and install the skin
+http://gomediawiki.com/wiki/Skin_download_page
+
+
 TODO: Instrcutions to change logo
 TODO: Instructions to change footer
 TODO: Instructions to provide links to twitter, facebook, youtube icons under search or remove not needed icons
