--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Free mediawiki skin with blue, green and red variations — http://gomediawiki.com/wiki/Free_wiki_skin
+Free mediawiki skin with blue, green and red variations â€” http://gomediawiki.com/wiki/Free_wiki_skin
 
 Instuctions to download and install the skin
 http://gomediawiki.com/wiki/Skin_download_page
@@ -7,3 +7,4 @@ http://gomediawiki.com/wiki/Skin_download_page
 TODO: Instrcutions to change logo
 TODO: Instructions to change footer
 TODO: Instructions to provide links to twitter, facebook, youtube icons under search or remove not needed icons
+TODO: Update the skin to latest versino of MW
