--- a/README
+++ b/README
@@ -7,4 +7,4 @@ http://gomediawiki.com/wiki/Skin_download_page
 TODO: Instrcutions to change logo
 TODO: Instructions to change footer
 TODO: Instructions to provide links to twitter, facebook, youtube icons under search or remove not needed icons
-TODO: Update the skin to latest versino of MW
+TODO: Update the skin to latest versino of MediaWiki
